--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="sidebar">
       <div class="user">
-        <img src="Elio.jpg" alt="user photo" class="user-photo">
+        <img src="profile.jpg" alt="user photo" class="user-photo">
         <div class="user-name">Elio</div>
         <div class="user-mail">elio.dev@email.com</div>
       </div>
